--- a/app/Resources/translations/messages.be.xlf
+++ b/app/Resources/translations/messages.be.xlf
@@ -186,6 +186,22 @@
                 <source>Save article</source>
                 <target>Захаваць артыкул</target>
             </trans-unit>
+            <trans-unit id="Log in">
+                <source>Log in</source>
+                <target>Увайсьці</target>
+            </trans-unit>
+            <trans-unit id="Sign up">
+                <source>Sign up</source>
+                <target>Зарэгістравацца</target>
+            </trans-unit>
+            <trans-unit id="Password">
+                <source>Password</source>
+                <target>Пароль</target>
+            </trans-unit>
+            <trans-unit id="Forgot password?">
+                <source>Forgot password?</source>
+                <target>Забылі пароль?</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
