--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -186,6 +186,22 @@
                 <source>Save article</source>
                 <target>Save article</target>
             </trans-unit>
+            <trans-unit id="Log in">
+                <source>Log in</source>
+                <target>Log in</target>
+            </trans-unit>
+            <trans-unit id="Sign up">
+                <source>Sign up</source>
+                <target>Sign up</target>
+            </trans-unit>
+            <trans-unit id="Password">
+                <source>Password</source>
+                <target>Password</target>
+            </trans-unit>
+            <trans-unit id="Forgot password?">
+                <source>Forgot password?</source>
+                <target>Forgot password?</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
